--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 			    	<div class="key">
 			    		<p class="letter">D</p>
               			<p class="message">LANCH</p>
+                    <p class="message alt_message hidden">SMOLLI</p>
               		</div>
 			    	<div class="key">
 				    	<p class="letter special" id="prev">&#8678;</p>
@@ -119,10 +120,12 @@
 			    	<div class="key">
 			    		<p class="letter">X</p>
               			<p class="message">GENIUS</p>
+                    <p class="message alt_message hidden">EUNUCO</p>
               		</div>
 			    	<div class="key">
 		    			<p class="letter">C</p>
               			<p class="message">CRAI</p>
+                    <p class="message alt_message hidden">DEFOJANCE</p>
               		</div>
 			    	<div class="key">
 			    		<p class="letter">V</p>
